pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError1.pkl
res = new Listing<String> {
  1
}
